Issue #2945502 by Manuel Garcia: Unreadable text on site branding block when placed outside of the header

--- a/core/themes/bartik/css/colors.css
+++ b/core/themes/bartik/css/colors.css
@@ -46,10 +46,10 @@ a:active,
 .region-header,
 .region-header a,
 .region-header li a.is-active,
-.site-branding__text,
-.site-branding,
-.site-branding__text a,
-.site-branding a,
+.region-header .site-branding__text,
+.region-header .site-branding,
+.region-header .site-branding__text a,
+.region-header .site-branding a,
 .region-secondary-menu .menu-item a,
 .region-secondary-menu .menu-item a.is-active {
   color: #fffeff;
